--- a/ADSB/ADSBModule/ADS-B.storyboard
+++ b/ADSB/ADSBModule/ADS-B.storyboard
@@ -57,10 +57,10 @@
                                 </connections>
                             </switch>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-- KM" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTI-wg-iSX">
-                                <rect key="frame" x="20" y="46" width="521" height="95"/>
+                                <rect key="frame" x="89" y="46" width="462" height="95"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="521" id="63C-4A-ovw"/>
-                                    <constraint firstAttribute="height" constant="95" id="NLq-Pv-brn"/>
+                                    <constraint firstAttribute="width" constant="462" id="9he-eg-T8m"/>
+                                    <constraint firstAttribute="height" constant="95" id="uTd-at-8G4"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Gotham-Bold" family="Gotham" pointSize="120"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -91,20 +91,21 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="cnQ-1J-0bJ" firstAttribute="top" secondItem="iPt-zn-O8w" secondAttribute="bottom" constant="8" id="0Ab-sS-ZDj"/>
-                            <constraint firstItem="RTI-wg-iSX" firstAttribute="centerX" secondItem="COT-41-4XG" secondAttribute="centerX" constant="-53" id="3y0-wc-EB9"/>
                             <constraint firstAttribute="trailingMargin" secondItem="cnQ-1J-0bJ" secondAttribute="trailing" constant="68" id="5SM-PI-ab6"/>
                             <constraint firstItem="nUr-BA-fK9" firstAttribute="top" secondItem="iPt-zn-O8w" secondAttribute="bottom" constant="56" id="CKM-9y-XgT"/>
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="centerY" secondItem="HSg-KJ-Qlg" secondAttribute="centerY" id="Don-L8-EcC"/>
                             <constraint firstItem="cnQ-1J-0bJ" firstAttribute="leading" secondItem="COT-41-4XG" secondAttribute="leadingMargin" constant="69" id="FlK-C0-T6r"/>
+                            <constraint firstItem="RTI-wg-iSX" firstAttribute="centerX" secondItem="cnQ-1J-0bJ" secondAttribute="centerX" constant="-14" id="M6C-DC-3ST"/>
                             <constraint firstItem="ghr-sK-5WW" firstAttribute="leading" secondItem="COT-41-4XG" secondAttribute="leadingMargin" constant="-20" id="U55-Az-jHE"/>
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="trailing" secondItem="nUr-BA-fK9" secondAttribute="trailing" constant="3" id="Z96-qN-djh"/>
                             <constraint firstItem="HOY-Ho-n6c" firstAttribute="centerX" secondItem="1Cx-Ur-GXh" secondAttribute="centerX" id="ZwD-8h-Aav"/>
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="leading" secondItem="HSg-KJ-Qlg" secondAttribute="trailing" constant="8" id="m3Y-pf-ex0"/>
+                            <constraint firstItem="RTI-wg-iSX" firstAttribute="top" secondItem="cnQ-1J-0bJ" secondAttribute="bottom" constant="8" id="pLx-pF-dVR"/>
                             <constraint firstAttribute="trailing" secondItem="nUr-BA-fK9" secondAttribute="trailing" constant="11" id="pa5-9k-iSc"/>
                             <constraint firstAttribute="bottom" secondItem="1Cx-Ur-GXh" secondAttribute="bottom" constant="20" symbolic="YES" id="q5Z-Yu-64j"/>
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="top" secondItem="HOY-Ho-n6c" secondAttribute="bottom" constant="8" id="r1n-vD-4zs"/>
+                            <constraint firstItem="1Cx-Ur-GXh" firstAttribute="centerX" secondItem="nUr-BA-fK9" secondAttribute="centerX" id="rfw-v4-anh"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ghr-sK-5WW" secondAttribute="trailing" constant="-20" id="sxE-46-1rV"/>
-                            <constraint firstItem="RTI-wg-iSX" firstAttribute="top" secondItem="cnQ-1J-0bJ" secondAttribute="bottom" constant="8" id="vg6-hi-spq"/>
                             <constraint firstItem="ghr-sK-5WW" firstAttribute="top" secondItem="iPt-zn-O8w" secondAttribute="bottom" id="w6K-iU-mF0"/>
                             <constraint firstItem="9yt-tC-Uoy" firstAttribute="top" secondItem="ghr-sK-5WW" secondAttribute="bottom" id="yvn-mM-5yW"/>
                         </constraints>
