--- a/ADSB/ADSBModule/ADS-B.storyboard
+++ b/ADSB/ADSBModule/ADS-B.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="is2-qm-zg4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="is2-qm-zg4">
     <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13147.4"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -87,6 +87,18 @@
                                     <segue destination="1iw-u8-KoN" kind="showDetail" identifier="PresentARViewIdentifier" id="5g6-9V-hAG"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z6p-nx-Ghi">
+                                <rect key="frame" x="611" y="122" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="aix-sc-BEd"/>
+                                    <constraint firstAttribute="width" constant="44" id="syb-XO-tbX"/>
+                                </constraints>
+                                <state key="normal" image="no-fly zone_disable"/>
+                                <state key="selected" image="no-fly-zone_active"/>
+                                <connections>
+                                    <action selector="droneRestrictButtionTouchUpInside:" destination="is2-qm-zg4" eventType="touchUpInside" id="eS2-4e-Ass"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -96,6 +108,7 @@
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="centerY" secondItem="HSg-KJ-Qlg" secondAttribute="centerY" id="Don-L8-EcC"/>
                             <constraint firstItem="cnQ-1J-0bJ" firstAttribute="leading" secondItem="COT-41-4XG" secondAttribute="leadingMargin" constant="69" id="FlK-C0-T6r"/>
                             <constraint firstItem="RTI-wg-iSX" firstAttribute="centerX" secondItem="cnQ-1J-0bJ" secondAttribute="centerX" id="M6C-DC-3ST"/>
+                            <constraint firstItem="z6p-nx-Ghi" firstAttribute="leading" secondItem="ghr-sK-5WW" secondAttribute="trailing" constant="-56" id="T7P-4B-Amx"/>
                             <constraint firstItem="ghr-sK-5WW" firstAttribute="leading" secondItem="COT-41-4XG" secondAttribute="leadingMargin" constant="-20" id="U55-Az-jHE"/>
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="trailing" secondItem="nUr-BA-fK9" secondAttribute="trailing" constant="3" id="Z96-qN-djh"/>
                             <constraint firstItem="HOY-Ho-n6c" firstAttribute="centerX" secondItem="1Cx-Ur-GXh" secondAttribute="centerX" id="ZwD-8h-Aav"/>
@@ -107,6 +120,7 @@
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="centerX" secondItem="nUr-BA-fK9" secondAttribute="centerX" id="rfw-v4-anh"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ghr-sK-5WW" secondAttribute="trailing" constant="-20" id="sxE-46-1rV"/>
                             <constraint firstItem="ghr-sK-5WW" firstAttribute="top" secondItem="iPt-zn-O8w" secondAttribute="bottom" id="w6K-iU-mF0"/>
+                            <constraint firstItem="z6p-nx-Ghi" firstAttribute="top" secondItem="nUr-BA-fK9" secondAttribute="bottom" constant="22" id="xt4-lZ-Rmh"/>
                             <constraint firstItem="9yt-tC-Uoy" firstAttribute="top" secondItem="ghr-sK-5WW" secondAttribute="bottom" id="yvn-mM-5yW"/>
                         </constraints>
                     </view>
@@ -114,6 +128,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="droneRestrictButton" destination="z6p-nx-Ghi" id="tEE-g8-lIi"/>
                         <outlet property="hideOnGroundACSwitch" destination="1Cx-Ur-GXh" id="kgL-Pg-Zd1"/>
                         <outlet property="mapView" destination="ghr-sK-5WW" id="VIt-YX-VFm"/>
                         <outlet property="rangeRadiusLabel" destination="RTI-wg-iSX" id="yVw-s5-1IY"/>
@@ -147,5 +162,7 @@
     <resources>
         <image name="looking" width="44" height="44"/>
         <image name="map-marker-with-a-person-shape" width="44" height="44"/>
+        <image name="no-fly zone_disable" width="400" height="400"/>
+        <image name="no-fly-zone_active" width="400" height="400"/>
     </resources>
 </document>
