--- a/ADSB/ADS-B.storyboard
+++ b/ADSB/ADS-B.storyboard
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="is2-qm-zg4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="is2-qm-zg4">
     <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13147.4"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Gotham-Bold.otf">
-            <string>Gotham-Bold</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Aero Chart View Controller-->
         <scene sceneID="JsK-Pk-Chg">
@@ -31,7 +25,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nUr-BA-fK9">
-                                <rect key="frame" x="612" y="56" width="44" height="44"/>
+                                <rect key="frame" x="607" y="56" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="InN-sM-Du7"/>
                                     <constraint firstAttribute="width" constant="44" id="Xqb-82-uTw"/>
@@ -51,7 +45,7 @@
                                 </connections>
                             </slider>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Cx-Ur-GXh">
-                                <rect key="frame" x="610" y="324" width="51" height="31"/>
+                                <rect key="frame" x="604" y="324" width="52" height="31"/>
                                 <connections>
                                     <action selector="displayOnGroundSwitchValueChanged:" destination="is2-qm-zg4" eventType="valueChanged" id="t1Q-Ob-zqb"/>
                                 </connections>
@@ -67,7 +61,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hidden aircrafts on the ground" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HSg-KJ-Qlg">
-                                <rect key="frame" x="233" y="325" width="369" height="28"/>
+                                <rect key="frame" x="227" y="325.5" width="369" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="369" id="mvR-JW-kN8"/>
                                     <constraint firstAttribute="height" constant="28" id="vgG-tK-Fwj"/>
@@ -77,7 +71,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HOY-Ho-n6c">
-                                <rect key="frame" x="612" y="272" width="44" height="44"/>
+                                <rect key="frame" x="607" y="272" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="cDn-pM-66c"/>
                                     <constraint firstAttribute="width" constant="44" id="yhP-xG-IF0"/>
@@ -88,7 +82,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z6p-nx-Ghi">
-                                <rect key="frame" x="611" y="122" width="44" height="44"/>
+                                <rect key="frame" x="607" y="122" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="aix-sc-BEd"/>
                                     <constraint firstAttribute="width" constant="44" id="syb-XO-tbX"/>
@@ -103,18 +97,18 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="cnQ-1J-0bJ" firstAttribute="top" secondItem="iPt-zn-O8w" secondAttribute="bottom" constant="8" id="0Ab-sS-ZDj"/>
+                            <constraint firstAttribute="trailing" secondItem="z6p-nx-Ghi" secondAttribute="trailing" constant="16" id="2uf-lz-ULC"/>
                             <constraint firstAttribute="trailingMargin" secondItem="cnQ-1J-0bJ" secondAttribute="trailing" constant="68" id="5SM-PI-ab6"/>
                             <constraint firstItem="nUr-BA-fK9" firstAttribute="top" secondItem="iPt-zn-O8w" secondAttribute="bottom" constant="56" id="CKM-9y-XgT"/>
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="centerY" secondItem="HSg-KJ-Qlg" secondAttribute="centerY" id="Don-L8-EcC"/>
                             <constraint firstItem="cnQ-1J-0bJ" firstAttribute="leading" secondItem="COT-41-4XG" secondAttribute="leadingMargin" constant="69" id="FlK-C0-T6r"/>
                             <constraint firstItem="RTI-wg-iSX" firstAttribute="centerX" secondItem="cnQ-1J-0bJ" secondAttribute="centerX" id="M6C-DC-3ST"/>
-                            <constraint firstItem="z6p-nx-Ghi" firstAttribute="leading" secondItem="ghr-sK-5WW" secondAttribute="trailing" constant="-56" id="T7P-4B-Amx"/>
                             <constraint firstItem="ghr-sK-5WW" firstAttribute="leading" secondItem="COT-41-4XG" secondAttribute="leadingMargin" constant="-20" id="U55-Az-jHE"/>
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="trailing" secondItem="nUr-BA-fK9" secondAttribute="trailing" constant="3" id="Z96-qN-djh"/>
                             <constraint firstItem="HOY-Ho-n6c" firstAttribute="centerX" secondItem="1Cx-Ur-GXh" secondAttribute="centerX" id="ZwD-8h-Aav"/>
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="leading" secondItem="HSg-KJ-Qlg" secondAttribute="trailing" constant="8" id="m3Y-pf-ex0"/>
                             <constraint firstItem="RTI-wg-iSX" firstAttribute="top" secondItem="cnQ-1J-0bJ" secondAttribute="bottom" constant="8" id="pLx-pF-dVR"/>
-                            <constraint firstAttribute="trailing" secondItem="nUr-BA-fK9" secondAttribute="trailing" constant="11" id="pa5-9k-iSc"/>
+                            <constraint firstAttribute="trailing" secondItem="nUr-BA-fK9" secondAttribute="trailing" constant="16" id="pa5-9k-iSc"/>
                             <constraint firstAttribute="bottom" secondItem="1Cx-Ur-GXh" secondAttribute="bottom" constant="20" symbolic="YES" id="q5Z-Yu-64j"/>
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="top" secondItem="HOY-Ho-n6c" secondAttribute="bottom" constant="8" id="r1n-vD-4zs"/>
                             <constraint firstItem="1Cx-Ur-GXh" firstAttribute="centerX" secondItem="nUr-BA-fK9" secondAttribute="centerX" id="rfw-v4-anh"/>
@@ -160,9 +154,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="looking" width="44" height="44"/>
-        <image name="map-marker-with-a-person-shape" width="44" height="44"/>
-        <image name="no-fly zone_disable" width="400" height="400"/>
-        <image name="no-fly-zone_active" width="400" height="400"/>
+        <image name="looking" width="70.400001525878906" height="70.400001525878906"/>
+        <image name="map-marker-with-a-person-shape" width="66.694740295410156" height="66.694740295410156"/>
+        <image name="no-fly zone_disable" width="1428" height="1290"/>
+        <image name="no-fly-zone_active" width="342.72000122070312" height="309.60000610351562"/>
     </resources>
 </document>
